--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-    "name": "mmm-accuweatherforecastdeluxe",
+    "name": "mmm-openmeteoforecastdeluxe",
     "version": "2.0.0",
-    "description": "MagicMirror² module that gets weather forecast data from AccuWeather",
+    "description": "MagicMirror² module that gets weather forecast data from OpenMeteo",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/maxbethge/MMM-AccuWeatherForecastDeluxe"
+        "url": "git+https://github.com/maxbethge/MMM-OpenMeteoForecastDeluxe"
     },
     "keywords": [
         "magicmirror",
         "weather"
       ],
-    "main": "MMM-AccuWeatherForecastDeluxe.js",
+    "main": "MMM-OpenMeteoForecastDeluxe.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "Max Bethge",
+    "author": "Dan Welsh",
     "license": "MIT",
     "dependencies": {
         "moment": "^2.28.0",
